crates/analyzer/tests/snapshots/errors__uninit_values.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: uninitialized variable
  ┌─ compile_errors/uninit_values.fe:7:13
  │
7 │         let my_struct: MyStruct
  │             ^^^^^^^^^ struct types must be initialized at declaration site

error: uninitialized variable
  ┌─ compile_errors/uninit_values.fe:8:13
  │
8 │         let my_array: Array<u256, 42>
  │             ^^^^^^^^ array types must be initialized at declaration site

error: uninitialized variable
  ┌─ compile_errors/uninit_values.fe:9:13
  │
9 │         let my_tuple: (u256, bool)
  │             ^^^^^^^^ tuple types must be initialized at declaration site


